[package]
name = "swappy2"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
redis = { version = "0.26.1", features = ["aio", "ahash", "tokio-comp", "tcp_nodelay"] }
teloxide = { version = "0.13.0", features = ["full"] }
tokio = { version = "1.39.3", features = ["full"] }
log = "0.4.22"
axum = "0.7.5"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
serde_urlencoded = "0.7.1"
url = "2.5.2"
serde = "1.0.209"
serde_json = "1.0.127"
